--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "~4.2.4",
+    "@testing-library/react": "~9.5.0",
+    "@testing-library/user-event": "~7.2.1",
+    "@types/react-transition-group": "^4.4.0",
+    "jquery": "^3.5.1",
+    "json-loader": "^0.5.7",
+    "radium": "0.26.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
