--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
